二回目のkaihatsuブランチんファイルのコミット

--- a/6.28github.html
+++ b/6.28github.html
@@ -3,10 +3,10 @@
 <head>
     <meta charaset = "utf-8">
     <meta name = "viewport" content="width-device-width, initial-scale-1.0">
-    <title>ブランチのマージテスト１</title>
+    <title>ブランチのマージテスト１の二個目</title>
 </head>
 <body>
-    <hi>6.28ブランチマージテスト</hi>
-    <p>このkaihatsu1のブランチをmainブランチに統合する。</p>
+    <hi>6.28ブランチマージテストの二個目</hi>
+    <p>このkaihatsu1のブランチをmainブランチに統合する。二個目の更新</p>
 </body>
 </html>
