一回目のファイル更新v2.0”

--- a/6.28github.html
+++ b/6.28github.html
@@ -3,10 +3,10 @@
 <head>
     <meta charaset = "utf-8">
     <meta name = "viewport" content="width-device-width, initial-scale-1.0">
-    <title>ブランチのマージテスト１</title>
+    <title>ファイルの更新v2.0</title>
 </head>
 <body>
-    <hi>6.28ブランチマージテスト</hi>
-    <p>このkaihatsu1のブランチをmainブランチに統合する。</p>
+    <hi>6.28ファイルの更新v2.0</hi>
+    <p>ファイルの更新をv1.0, v2.0でわけることができるのか。</p>
 </body>
 </html>
